46. Parent to Child Component communication using Input properties

--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -7,6 +7,13 @@
     <input type="text" class="form-control" required name="username" [(ngModel)]="model.username" placeholder="Username">
   </div>
 
+<div class="from-group">
+  <label for="favouriteValue">WHats is your favourite value?</label>
+  <select class="form-control col-12" id="favouriteValue">
+    <option *ngFor="let value of valuesFromHere" [value]="value">{{value.name}}</option>
+  </select>
+</div><br/>
+
   <div class="form-group">
     <input type="password" class="form-control" placeholder="Password" required name="password" [(ngModel)]="model.password">
   </div>
