--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+
 <div class="container mt-5">
   <div *ngIf="!registerMode" style="text-align: center">
     <h1>Find your match</h1>
@@ -11,7 +12,7 @@
   <div *ngIf="registerMode" class="container">
     <div class="row justify-content-center">
       <div class="col-4">
-          <app-register></app-register>
+          <app-register [valuesFromHere]="values"></app-register>
       </div>
     </div>
   </div>
