47. Component Communication Child to Parent using Output properties

--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -8,7 +8,7 @@
   </div>
 
 <div class="from-group">
-  <label for="favouriteValue">WHats is your favourite value?</label>
+  <label for="favouriteValue">Whats is your favourite value?</label>
   <select class="form-control col-12" id="favouriteValue">
     <option *ngFor="let value of valuesFromHere" [value]="value">{{value.name}}</option>
   </select>
